# BioPhenomDetector

./: .gitignore  Demo.ipynb  LICENSE  README.md  anomalies.py  data_loading.py  estimations.py  main.py  preprocessing.py  pyproject.toml  requirements.txt  setup.py  visualize.py
.github/workflows/: lint.yml
src/: anomalies.py  data_loading.py  estimations.py  visualize.py
src/biophenomdetector/: anomalies.py  data_loading.py  estimations.py  preprocessing.py  visualize.py
