[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biophenomdetector"
version = "0.1"
description = "A python module to analyze biophysical phenomena"
authors = [{name = "Lorenzo Melchior", email = "lorenzo.melchior@dida.do"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "tqdm",
    "pyproj",
    "pendulum",
    "geopandas",
    "rasterio",
    "sentinelhub",
    "shapely",
    "xarray",
    "rioxarray",
    "satellitetools @ git+https://github.com/ollinevalainen/satellitetools.git"
]

[project.urls]
Homepage = "https://github.com/LorenzoMelchior/BioPhenomDetector"
Repository = "https://github.com/LorenzoMelchior/BioPhenomDetector"

[tool.setuptools.packages.find]
where = ["src"]
